Bug #38560 valgrind warnings on PB due to query profiling
Submitted: 5 Aug 2008 8:33 Modified: 18 Sep 2008 17:53
Reporter: Sven Sandberg Email Updates:
Status: Closed
Category:Tests: Server Severity:S2 (Serious)
Version:5.1-rpl/bugteam OS:Any
Assigned to: Davi Arnaut Target Version:5.1
Tags: sporadic, test failure, valgrind, pushbuild, 5.1-rpl, rpl_init_slave
Triage: D3 (Medium)

[5 Aug 2008 8:33] Sven Sandberg
Description:
Seen in pushbuild:

rpl.rpl_init_slave                       [ fail ]  Found warnings in server log file!
@log_error
/dev/shm/var-n_mix-110/1/mysqld.2/mysqld.err
log_error
==24603==    at 0x6C8874: PROFILING::set_query_source(char*, unsigned)
(sql_profile.cc:473)
pattern
Found warnings

 - saving '/dev/shm/var-n_mix-110/1/log/rpl.rpl_init_slave/' to
'/dev/shm/var-n_mix-110/log/rpl.rpl_init_slave/'

Retrying test, attempt(2/3)...

How to repeat:
https://intranet.mysql.com/secure/pushbuild/showpush.pl?dir=bzr_mysql-5.1-rpl&order=30
'pb-valgrind-*'/n_mix
[13 Aug 2008 14:32] Davi Arnaut
Also happening on the bugteam tree for test casesinit_connect and init_file:

master.err: main.init_connect: ==8215==    at 0x6CCEB4:
PROFILING::set_query_source(char*, unsigned) (sql_profile.cc:473)
master.err: main.init_file: ==9438==    at 0x6CCEB4: PROFILING::set_query_source(char*,
unsigned) (sql_profile.cc:473))
slave.err: main.rpl_init_slave_func: ==26250==    at 0x6CCEB4:
PROFILING::set_query_source(char*, unsigned) (sql_profile.cc:473)
slave.err: rpl.rpl_init_slave: ==10871==    at 0x6CCEB4:
PROFILING::set_query_source(char*, unsigned) (sql_profile.cc:473)
[13 Aug 2008 15:07] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/51531

2696 Davi Arnaut	2008-08-13
      Bug#38560: valgrind warnings on PB due to query profiling
      
      Backport 6.0 fix for this problem:
      
      Fix for a valgrind warning due to a jump on a uninitialized
      variable. The problem was that the sql profile preparation
      function wasn't being called for all possible code paths
      of query execution. The solution is to move the preparation
      to the dispatch_command function and to explicitly call the
      profile preparation function on bootstrap.
[13 Aug 2008 15:49] Chad MILLER
Revno 2696 is okay for 5.1.
[13 Aug 2008 16:14] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/51534

2696 Davi Arnaut	2008-08-13
      Bug#38560: valgrind warnings on PB due to query profiling
      
      Backport 6.0 fix for this problem:
      
      Fix for a valgrind warning due to a jump on a uninitialized
      variable. The problem was that the sql profile preparation
      function wasn't being called for all possible code paths
      of query execution. The solution is to move the preparation
      to the dispatch_command function and to explicitly call the
      profile preparation function on bootstrap.
[15 Aug 2008 15:39] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/51749

2702 Davi Arnaut	2008-08-15
      Bug#38560: valgrind warnings on PB due to query profiling
      
      Fix for a valgrind warning due to a jump on a uninitialized
      variable. The problem was that the sql profile preparation
      function wasn't being called for all possible code paths
      of query execution.
      
      The solution is to ensure that query profiling is always
      started before dispatch_command function is called and to
      explicitly call the profile preparation function on bootstrap.
[15 Aug 2008 15:41] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/51750

2702 Davi Arnaut	2008-08-15
      Bug#38560: valgrind warnings on PB due to query profiling
      
      Fix for a valgrind warning due to a jump on a uninitialized
      variable. The problem was that the sql profile preparation
      function wasn't being called for all possible code paths
      of query execution.
      
      The solution is to ensure that query profiling is always
      started before dispatch_command function is called and to
      explicitly call the profile preparation function on bootstrap.
[15 Aug 2008 15:41] Davi Arnaut
Queued to 5.1-bugteam
[14 Sep 2008 3:13] Bugs System
Pushed into 6.0.7-alpha  (revid:davi.arnaut@sun.com-20080815153846-9mzqo0row9b2lr0o)
(version source revid:sven@mysql.com-20080818175803-c1nutd5773r6b4gd) (pib:3)
[18 Sep 2008 9:03] Paul DuBois
Setting to NDI pending push into 5.1.x.
[18 Sep 2008 17:53] Paul DuBois
Noted in 5.1.29 changelog.

An uninitialized variable in the query profiling code was corrected
(detected by Valgrind).